--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,5 +1,8 @@
 {
     "ConnectionStrings": {
         "DefaultConnection": "Server=localhost;Port=5555;Database=ExamProject;Username=exam_project;Password=12345;"
+    },
+    "LoggerSetting": {
+        "Type": "File"
     }
 }
